Sort fgfs source files in IDE folders - Don't work for headers though

--- a/simgear/CMakeLists.txt
+++ b/simgear/CMakeLists.txt
@@ -90,11 +90,47 @@ if(SIMGEAR_SHARED)
     install(TARGETS SimGearCore LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
 else()
     message(STATUS "Library building mode: STATIC LIBRARIES")
-    
+
+	get_property(FG_GROUPS_CORE_SOURCES_C GLOBAL PROPERTY FG_GROUPS_CORE_SOURCES_C)
+	string(REPLACE "@" ";" groups ${FG_GROUPS_CORE_SOURCES_C} )
+	foreach(g ${groups})
+		string(REPLACE "#" ";" g2 ${g})
+		list(GET g2 0 name)
+		list(REMOVE_AT g2 0)
+		source_group("${name}\\Sources" FILES ${g2})
+	endforeach()
+
+	get_property(FG_GROUPS_CORE_SOURCES_H GLOBAL PROPERTY FG_GROUPS_CORE_SOURCES_H)
+	string(REPLACE "@" ";" groups ${FG_GROUPS_CORE_SOURCES_H} )
+	foreach(g ${groups})
+		string(REPLACE "#" ";" g2 ${g})
+		list(GET g2 0 name)
+		list(REMOVE_AT g2 0)
+		source_group("${name}\\Headers" FILES ${g2})
+	endforeach()
+
     add_library(SimGearCore STATIC ${coreSources})
     install(TARGETS SimGearCore ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
     
     if(NOT SIMGEAR_HEADLESS)
+		get_property(FG_GROUPS_SCENE_SOURCES_C GLOBAL PROPERTY FG_GROUPS_SCENE_SOURCES_C)
+		string(REPLACE "@" ";" groups ${FG_GROUPS_SCENE_SOURCES_C} )
+		foreach(g ${groups})
+			string(REPLACE "#" ";" g2 ${g})
+			list(GET g2 0 name)
+			list(REMOVE_AT g2 0)
+			source_group("${name}\\Sources" FILES ${g2})
+		endforeach()
+
+		get_property(FG_GROUPS_SCENE_SOURCES_H GLOBAL PROPERTY FG_GROUPS_SCENE_SOURCES_H)
+		string(REPLACE "@" ";" groups ${FG_GROUPS_SCENE_SOURCES_H} )
+		foreach(g ${groups})
+			string(REPLACE "#" ";" g2 ${g})
+			list(GET g2 0 name)
+			list(REMOVE_AT g2 0)
+			source_group("${name}\\Headers" FILES ${g2})
+		endforeach()
+
         add_library(SimGearScene STATIC ${sceneSources})
         install(TARGETS SimGearScene ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
     endif(NOT SIMGEAR_HEADLESS)
