Move FGODGauge from FlightGear to SimGear.
This is a first step for moving the Canvas system to SimGear to
make it accessible to other applications (eg.FGRadar is going to
use it)

--- a/simgear/CMakeLists.txt
+++ b/simgear/CMakeLists.txt
@@ -24,6 +24,7 @@ foreach( mylibfolder
 endforeach( mylibfolder )
 
 if(NOT SIMGEAR_HEADLESS)
+    add_subdirectory(canvas)
     add_subdirectory(environment)
     add_subdirectory(screen)
     add_subdirectory(scene)
