Link with ShivaVG

--- a/simgear/CMakeLists.txt
+++ b/simgear/CMakeLists.txt
@@ -79,6 +79,7 @@ if(SIMGEAR_SHARED)
 
         target_link_libraries(SimGearScene
             SimGearCore
+            ShivaVG
             ${ZLIB_LIBRARY}
             ${OPENSCENEGRAPH_LIBRARIES}
             ${OPENAL_LIBRARY}
