--- a/simgear/canvas/CMakeLists.txt
+++ b/simgear/canvas/CMakeLists.txt
@@ -8,4 +8,6 @@ set(SOURCES
     ODGauge.cxx
     )
 
+add_subdirectory(ShivaVG/src)
+
 simgear_scene_component(canvas canvas "${SOURCES}" "${HEADERS}")
