Helper for property controlled subsystems
 - Subsystem which manages a list of elements which
   are controlled through the property tree.
 - Fix a ShivaVG compiler warning.
 - Add some helper functions to trigger property removed/add
   events for a whole property tree.

--- a/simgear/props/CMakeLists.txt
+++ b/simgear/props/CMakeLists.txt
@@ -4,6 +4,8 @@ include (SimGearComponent)
 set(HEADERS 
     AtomicChangeListener.hxx
     ExtendedPropertyAdapter.hxx
+    PropertyBasedElement.hxx
+    PropertyBasedMgr.hxx
     condition.hxx
     propertyObject.hxx
     props.hxx
@@ -15,6 +17,8 @@ set(HEADERS
 
 set(SOURCES 
     AtomicChangeListener.cxx
+    PropertyBasedElement.cxx
+    PropertyBasedMgr.cxx
     condition.cxx
     propertyObject.cxx
     props.cxx
