Refactor Canvas and add some helpers.
 - Refactor Canvas from FlightGear and fix lazy rendering with
   recursive canvases.
 - New classes PropertyBasedElement and PropertyBasedManager for
   creating subsystems controlled by the property tree.
 - New method parseColor to parse CSS 3 conformant color strings
   (only basic color schemes supported)
 - New Rect class representing a rectangle.

--- a/simgear/canvas/CMakeLists.txt
+++ b/simgear/canvas/CMakeLists.txt
@@ -1,14 +1,25 @@
 include (SimGearComponent)
 
 set(HEADERS
-    ODGauge.hxx
-    VGInitOperation.hxx
-    )
+  canvas_fwd.hxx
+  Canvas.hxx
+  CanvasMgr.hxx
+  CanvasPlacement.hxx
+  CanvasSystemAdapter.hxx
+  MouseEvent.hxx
+  ODGauge.hxx
+  VGInitOperation.hxx
+)
 
 set(SOURCES
-    ODGauge.cxx
-    )
+  Canvas.cxx
+  CanvasMgr.cxx
+  CanvasPlacement.cxx
+  ODGauge.cxx
+)
 
 add_subdirectory(ShivaVG/src)
+include_directories(ShivaVG/include)
 
+add_subdirectory(elements)
 simgear_scene_component(canvas canvas "${SOURCES}" "${HEADERS}")
