--- a/simgear/canvas/ShivaVG/src/CMakeLists.txt
+++ b/simgear/canvas/ShivaVG/src/CMakeLists.txt
@@ -46,3 +46,7 @@ TARGET_LINK_LIBRARIES(
     ${OPENGL_gl_LIBRARY}
     ${OPENGL_glu_LIBRARY}
 )
+
+if(NOT SIMGEAR_HEADLESS)
+  install(TARGETS ShivaVG ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
+endif()
