Fix windows and headless build

--- a/simgear/canvas/ShivaVG/src/CMakeLists.txt
+++ b/simgear/canvas/ShivaVG/src/CMakeLists.txt
@@ -1,27 +1,30 @@
 include(SimGearComponent)
 
-#add_definitions(-DVG_API_EXPORT)
-
-set(ShivaVG_Src
-    ${SRCROOT}/shArrays.c
-    ${SRCROOT}/shArrays.h
-    ${SRCROOT}/shContext.c
-    ${SRCROOT}/shContext.h
-    ${SRCROOT}/shExtensions.c
-    ${SRCROOT}/shExtensions.h
-    ${SRCROOT}/shGeometry.c
-    ${SRCROOT}/shGeometry.h
-    ${SRCROOT}/shImage.c
-    ${SRCROOT}/shImage.h
-    ${SRCROOT}/shPaint.c
-    ${SRCROOT}/shPaint.h
-    ${SRCROOT}/shParams.c
-    ${SRCROOT}/shPath.c
-    ${SRCROOT}/shPath.h
-    ${SRCROOT}/shPipeline.c
-    ${SRCROOT}/shVectors.c
-    ${SRCROOT}/shVectors.h
-    ${SRCROOT}/shVgu.c
+set(HEADERS
+  ../include/vg/openvg.h
+  ../include/vg/vgu.h
 )
 
-simgear_scene_component(ShivaVG canvas/ShivaVG "${ShivaVG_Src}" "")
+set(SOURCES
+  shArrays.c
+  shArrays.h
+  shContext.c
+  shContext.h
+  shExtensions.c
+  shExtensions.h
+  shGeometry.c
+  shGeometry.h
+  shImage.c
+  shImage.h
+  shPaint.c
+  shPaint.h
+  shParams.c
+  shPath.c
+  shPath.h
+  shPipeline.c
+  shVectors.c
+  shVectors.h
+  shVgu.c
+)
+
+simgear_scene_component(ShivaVG canvas/ShivaVG "${SOURCES}" "${HEADERS}")
