Some basic C++/Nasal binding helpers
 - Add nasal::to_nasal for converting different C++ types
   to the according Nasal types.
 - Add nasal::Hash, an OOP wrapper around Nasal hashes.

--- a/simgear/CMakeLists.txt
+++ b/simgear/CMakeLists.txt
@@ -11,6 +11,7 @@ foreach( mylibfolder
         math
         misc
         nasal
+        nasal/cppbind
         props
         serial
         structure
