gz wrapper to write and read "container files". Packs arbitrary data (strings, property trees, binary blobs, ...) into a single file. Use this for storing/loading user-data only, not for distribution files (scenery, aircraft etc).

--- a/simgear/misc/CMakeLists.txt
+++ b/simgear/misc/CMakeLists.txt
@@ -13,7 +13,7 @@ set(HEADERS
     tabbed_values.hxx
     texcoord.hxx
     zfstream.hxx
-    
+    gzcontainerfile.hxx
     )
 
 set(SOURCES 
@@ -26,6 +26,7 @@ set(SOURCES
     tabbed_values.cxx
     texcoord.cxx
     zfstream.cxx
+    gzcontainerfile.cxx
     )
 
 simgear_component(misc misc "${SOURCES}" "${HEADERS}")
