math: Implement SGLocation.
New simple class to encapsulate a cartesian position
and orientation pair with few handy methods.

--- a/simgear/math/CMakeLists.txt
+++ b/simgear/math/CMakeLists.txt
@@ -13,6 +13,7 @@ set(HEADERS
     SGIntersect.hxx
     SGLimits.hxx
     SGLineSegment.hxx
+    SGLocation.hxx
     SGMath.hxx
     SGMathFwd.hxx
     SGMatrix.hxx
