hla: Use an implementation file for SGLocation.

--- a/simgear/hla/CMakeLists.txt
+++ b/simgear/hla/CMakeLists.txt
@@ -41,6 +41,7 @@ set(HLA_SOURCES
     HLAInteractionClass.cxx
     HLAFixedRecordDataElement.cxx
     HLAFixedRecordDataType.cxx
+    HLALocation.cxx
     HLAObjectClass.cxx
     HLAObjectInstance.cxx
     HLAOMTXmlVisitor.cxx
