Implement Canvas single/double/tripple click handling.
 - Implement click event creation like specified in
   DOM Level 3:
   * Check for max move distance between mousedown/up
     and clicks
   * Check for click timeout
   * Count clicks and report double clicks

--- a/simgear/canvas/CMakeLists.txt
+++ b/simgear/canvas/CMakeLists.txt
@@ -5,6 +5,7 @@ set(HEADERS
   Canvas.hxx
   CanvasEvent.hxx
   CanvasEventListener.hxx
+  CanvasEventManager.hxx
   CanvasEventTypes.hxx
   CanvasEventVisitor.hxx
   CanvasMgr.hxx
@@ -19,6 +20,7 @@ set(SOURCES
   Canvas.cxx
   CanvasEvent.cxx
   CanvasEventListener.cxx
+  CanvasEventManager.cxx
   CanvasEventVisitor.cxx
   CanvasMgr.cxx
   CanvasPlacement.cxx
