State-machine structure, initial work.

--- a/simgear/structure/CMakeLists.txt
+++ b/simgear/structure/CMakeLists.txt
@@ -23,6 +23,7 @@ set(HEADERS
     exception.hxx
     intern.hxx
     subsystem_mgr.hxx
+    StateMachine.hxx
     )
 
 set(SOURCES
@@ -36,7 +37,15 @@ set(SOURCES
     commands.cxx
     event_mgr.cxx
     exception.cxx
-    subsystem_mgr.cxx
+    subsystem_mgr.cxx 
+    StateMachine.cxx
     )
 
 simgear_component(structure structure "${SOURCES}" "${HEADERS}")
+
+if(ENABLE_TESTS)
+add_executable(test_state_machine state_machine_test.cxx)
+target_link_libraries(test_state_machine SimGearCore)
+add_test(test_state_machine ${EXECUTABLE_OUTPUT_PATH}/test_state_machine)
+
+endif(ENABLE_TESTS)
