Nasal String wrapper and allow adding methods to string objects.
 - Add nasal::String for wrapping Nasal string data and accessing
   string methods (which eg. could be exposed to Nasal)
 - Allow adding functions from C/C++ which are callable on
   Nasal strings.

--- a/simgear/nasal/cppbind/CMakeLists.txt
+++ b/simgear/nasal/cppbind/CMakeLists.txt
@@ -3,6 +3,7 @@ include (SimGearComponent)
 set(HEADERS
   Ghost.hxx
   NasalHash.hxx
+  NasalString.hxx
   from_nasal_detail.hxx
   from_nasal.hxx
   nasal_traits.hxx
@@ -11,6 +12,7 @@ set(HEADERS
 
 set(SOURCES
   NasalHash.cxx
+  NasalString.cxx
   from_nasal.cxx
   to_nasal.cxx
 )
