--- a/simgear/props/CMakeLists.txt
+++ b/simgear/props/CMakeLists.txt
@@ -28,11 +28,18 @@ set(SOURCES
 simgear_component(props props "${SOURCES}" "${HEADERS}")
 
 if(ENABLE_TESTS)
+
+if (SIMGEAR_SHARED)
+    set(TEST_LIBS SimGearCore)
+else()
+    set(TEST_LIBS SimGearCore ${CMAKE_THREAD_LIBS_INIT})
+endif()
+
 add_executable(test_props props_test.cxx)
-target_link_libraries(test_props SimGearCore)
+target_link_libraries(test_props ${TEST_LIBS})
 add_test(test_props ${EXECUTABLE_OUTPUT_PATH}/test_props)
 
 add_executable(test_propertyObject propertyObject_test.cxx)
-target_link_libraries(test_propertyObject SimGearCore)
+target_link_libraries(test_propertyObject ${TEST_LIBS})
 add_test(test_propertyObject ${EXECUTABLE_OUTPUT_PATH}/test_propertyObject)
 endif(ENABLE_TESTS)
