Fix bucketBoxTest linkage.

--- a/simgear/scene/tgdb/CMakeLists.txt
+++ b/simgear/scene/tgdb/CMakeLists.txt
@@ -41,8 +41,14 @@ set(SOURCES
 simgear_scene_component(tgdb scene/tgdb "${SOURCES}" "${HEADERS}")
 
 if(ENABLE_TESTS)
+    if (SIMGEAR_SHARED)
+        set(TEST_LIBS SimGearCore)
+    else()
+        set(TEST_LIBS SimGearCore ${CMAKE_THREAD_LIBS_INIT})
+    endif()
+
   add_executable(BucketBoxTest BucketBoxTest.cxx)
-  target_link_libraries(BucketBoxTest SimGearCore)
+  target_link_libraries(BucketBoxTest ${TEST_LIBS})
   add_test(BucketBoxTest ${EXECUTABLE_OUTPUT_PATH}/BucketBoxTest)
 
 endif(ENABLE_TESTS)
