Move BufferedLogCallback to its own class.
Reduces includes in logstream.hxx, which is included by everyone and hence needs to be lightweight.

--- a/simgear/debug/CMakeLists.txt
+++ b/simgear/debug/CMakeLists.txt
@@ -1,7 +1,7 @@
 
 include (SimGearComponent)
 
-set(HEADERS debug_types.h logstream.hxx)
-set(SOURCES logstream.cxx)
+set(HEADERS debug_types.h logstream.hxx BufferedLogCallback.hxx)
+set(SOURCES logstream.cxx BufferedLogCallback.cxx)
 
 simgear_component(debug debug "${SOURCES}" "${HEADERS}")
