Updated package-management code.
Use mini-unzip code to extract, since we don't need all the features of libArchive, and the deployment issues become simpler.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -225,8 +225,7 @@ else()
 endif(SYSTEM_EXPAT)
 
 if (ENABLE_PACKAGE)
-    message(STATUS "package management: ENABLED: libArchive is needed")
-    find_package(LibArchive REQUIRED)
+    message(STATUS "package management: ENABLED")
 else()
     message(STATUS "package management: DISABLED")
 endif(ENABLE_PACKAGE)
