cppbind: rework to allow binding nearly everything.
It is now possible to register all types of member function
and free functions as methods for nasal::Ghost objects.
The return value and arguments are converte automatically
to the required types.

Also usage is simplified by removing replacing the old
method and method_func with a single method function
which only needs a name for the method and something
callable.

--- a/simgear/nasal/cppbind/CMakeLists.txt
+++ b/simgear/nasal/cppbind/CMakeLists.txt
@@ -10,6 +10,10 @@ set(HEADERS
   to_nasal.hxx
 )
 
+set(DETAIL_HEADERS
+  detail/functor_templates.hxx
+)
+
 set(SOURCES
   NasalHash.cxx
   NasalString.cxx
@@ -18,6 +22,7 @@ set(SOURCES
 )
 
 simgear_component(nasal/cppbind nasal/cppbind "${SOURCES}" "${HEADERS}")
+simgear_component(nasal/cppbind/detail nasal/cppbind/detail "" "${DETAIL_HEADERS}")
 
 if(ENABLE_TESTS)
 
