--- a/simgear/scene/util/CMakeLists.txt
+++ b/simgear/scene/util/CMakeLists.txt
@@ -53,7 +53,9 @@ set(SOURCES
 simgear_scene_component(util scene/util "${SOURCES}" "${HEADERS}")
 
 if(ENABLE_TESTS)
+
 add_executable(test_parse_color parse_color_test.cxx )
 add_test(test_parse_color ${EXECUTABLE_OUTPUT_PATH}/test_parse_color)
-target_link_libraries(test_parse_color SimGearScene)
+target_link_libraries(test_parse_color ${TEST_LIBS})
+
 endif(ENABLE_TESTS)
