New interpolation/animation system.
Inspired by jQuery.animate() properties can be interpolated using
different easing functions and specifying an animation duration.
Additionally animations can be chained to get table-based
animations like with the current SGInterpolator, or also create
looped animations or other more complicated curves.

Currently this system is not used yet, but it is intended to
replace SGInterpolator and allow more advanced animations of
eg. also colors, for example, for the canvas.

--- a/simgear/props/CMakeLists.txt
+++ b/simgear/props/CMakeLists.txt
@@ -3,10 +3,13 @@ include (SimGearComponent)
 
 set(HEADERS 
     AtomicChangeListener.hxx
+    condition.hxx
+    easing_functions.hxx
     ExtendedPropertyAdapter.hxx
     PropertyBasedElement.hxx
     PropertyBasedMgr.hxx
-    condition.hxx
+    PropertyInterpolationMgr.hxx
+    PropertyInterpolator.hxx
     propertyObject.hxx
     props.hxx
     props_io.hxx
@@ -17,9 +20,12 @@ set(HEADERS
 
 set(SOURCES 
     AtomicChangeListener.cxx
+    condition.cxx
+    easing_functions.cxx
     PropertyBasedElement.cxx
     PropertyBasedMgr.cxx
-    condition.cxx
+    PropertyInterpolationMgr.cxx
+    PropertyInterpolator.cxx
     propertyObject.cxx
     props.cxx
     props_io.cxx
@@ -36,4 +42,9 @@ add_test(test_props ${EXECUTABLE_OUTPUT_PATH}/test_props)
 add_executable(test_propertyObject propertyObject_test.cxx)
 target_link_libraries(test_propertyObject ${TEST_LIBS})
 add_test(test_propertyObject ${EXECUTABLE_OUTPUT_PATH}/test_propertyObject)
+
+add_executable(test_easing_functions easing_functions_test.cxx)
+target_link_libraries(test_easing_functions ${TEST_LIBS})
+add_test(test_easing_functions ${EXECUTABLE_OUTPUT_PATH}/test_easing_functions)
+
 endif(ENABLE_TESTS)
