Use std::make_heap for managing timers.
Also adds some unit-tests for timer API, and fixes repeating tasks firing immediately. For now repeating tasks always fire after their normal interval, since no one was using the initial-delay feature.

--- a/simgear/structure/CMakeLists.txt
+++ b/simgear/structure/CMakeLists.txt
@@ -53,4 +53,8 @@ add_executable(test_expressions expression_test.cxx)
 target_link_libraries(test_expressions ${TEST_LIBS})
 add_test(test_expressions ${EXECUTABLE_OUTPUT_PATH}/test_expressions)
 
+add_executable(test_events event_mgr_test.cxx)
+target_link_libraries(test_events ${TEST_LIBS})
+add_test(test_events ${EXECUTABLE_OUTPUT_PATH}/test_events)
+
 endif(ENABLE_TESTS)
